# solana-ws

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  test.py
.github/workflows/: ci.yml  rust.yml
config/: README.md
docs/: ARCHITECTURE.md  PROJECT_STRUCTURE.md
examples/: README.md  client.js  client.py  package.json  requirements.txt
src/: error.rs  main.rs  parser.rs  pump_parser.rs  rpc.rs  server.rs  solana_client.rs  types.rs
src/archive/: pump_parser.rs  ws_server.rs
tests/: README.md
