[package]
name = "apeing-ws-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tungstenite = "0.20"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }


serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
url = "2.5"

